--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
   <body>
     <header class="header">
       <h1 class="main-header">Color Palette</h1>
+      <form id="addColor" class="new-box-color">
+        <input type="text" class="new-box-color" id="newColor" placeholder="Enter New Box Color (Hex)">
+        <input type="submit" name="addColor" value="Add Color to Palette">
+      </form>
     </header>
-    <div class="wraper">
+    <div class="wraper" id="palette">
       <div class="color-box" id="box1">Test01
         <input type="text" class="box-color box-input">
-        <span class="close-btn">X</span>
+        <button name="X" class="close-btn">X</button>
       </div>
       <div class="color-box" id="box2">Test02
         <input type="text" class="box-color box-input">
-        <span class="close-btn">X</span>
+        <button name="X" class="close-btn">X</button>
       </div>
     </div>
 
