--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       </form>
     </header>
     <div class="wraper" id="palette">
-      <div class="color-box" id="box1">Test01
+      <div class="color-box">Test01
         <input type="text" class="box-color box-input">
         <button name="X" class="close-btn">X</button>
       </div>
-      <div class="color-box" id="box2">Test02
+      <div class="color-box">Test02
         <input type="text" class="box-color box-input">
         <button name="X" class="close-btn">X</button>
       </div>
