--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
         <input type="submit" name="addColor" value="Add Color to Palette">
       </form>
     </header>
-    <div class="wraper" id="palette">
-      <div class="color-box">Test01
-        <input type="text" class="box-color box-input">
-        <button name="X" class="close-btn">X</button>
-      </div>
-      <div class="color-box">Test02
-        <input type="text" class="box-color box-input">
-        <button name="X" class="close-btn">X</button>
-      </div>
-    </div>
+    <div class="wraper" id="palette"></div>
 
     <script src="main.js">
 
