Added names to boxes adn some input modifications

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="header">
       <h1 class="main-header">Color Palette</h1>
       <form id="addColor" class="new-box-color">
-        <input type="text" class="new-box-color" id="newColor" placeholder="Enter New Box Color (Hex)">
+        <input type="text" id="color-input" class="new-box-color new-color"  placeholder="Enter New Box Color (Hex)">
         <input type="submit" name="addColor" value="Add Color to Palette">
       </form>
     </header>
